{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 276,
  "lineage": "a56987be-5b23-c88d-b397-c95912762af1",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-057c69bec2ddafcf1",
            "association_id": "eipassoc-0285aec6b486c328e",
            "domain": "vpc",
            "id": "eipalloc-057c69bec2ddafcf1",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0e3fec31986f18147",
            "private_dns": "ip-10-203-20-141.us-east-2.compute.internal",
            "private_ip": "10.203.20.141",
            "public_dns": "ec2-3-21-184-114.us-east-2.compute.amazonaws.com",
            "public_ip": "3.21.184.114",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "production",
              "Group": "Network",
              "Name": "nat-gateway-ip-backup-production"
            },
            "tags_all": {
              "Environment": "production",
              "Group": "Network",
              "Name": "nat-gateway-ip-backup-production"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:213307118311:internet-gateway/igw-03a411ebf05542624",
            "id": "igw-03a411ebf05542624",
            "owner_id": "213307118311",
            "tags": {
              "Environment": "production",
              "Group": "Network",
              "Name": "internet-gateway-backup-production"
            },
            "tags_all": {
              "Environment": "production",
              "Group": "Network",
              "Name": "internet-gateway-backup-production"
            },
            "vpc_id": "vpc-0f7f9fa07c37ec272"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-057c69bec2ddafcf1",
            "association_id": "eipassoc-0285aec6b486c328e",
            "connectivity_type": "public",
            "id": "nat-0cea2ba7081f3e8aa",
            "network_interface_id": "eni-0e3fec31986f18147",
            "private_ip": "10.203.20.141",
            "public_ip": "3.21.184.114",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-048465931170d1ab6",
            "tags": {
              "Environment": "production",
              "Group": "Network",
              "Name": "nat-gateway-backup-production"
            },
            "tags_all": {
              "Environment": "production",
              "Group": "Network",
              "Name": "nat-gateway-backup-production"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat_gateway",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_subnet.subnet-public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:213307118311:route-table/rtb-0d1097b7c79a0ab7a",
            "id": "rtb-0d1097b7c79a0ab7a",
            "owner_id": "213307118311",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cea2ba7081f3e8aa",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-backup-production"
            },
            "tags_all": {
              "Name": "private-backup-production"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f7f9fa07c37ec272"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_gateway",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_subnet.subnet-public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:213307118311:route-table/rtb-0a62e25508ab71341",
            "id": "rtb-0a62e25508ab71341",
            "owner_id": "213307118311",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03a411ebf05542624",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-backup-production"
            },
            "tags_all": {
              "Name": "public-backup-production"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f7f9fa07c37ec272"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.main",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ee665598edd5b1d",
            "route_table_id": "rtb-0d1097b7c79a0ab7a",
            "subnet_id": "subnet-0c59a1f5c6d415be9"
          },
          "dependencies": [
            "module.network.aws_eip.nat_gateway",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.subnet-app-private",
            "module.network.aws_subnet.subnet-public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0131e2c1430355558",
            "route_table_id": "rtb-0d1097b7c79a0ab7a",
            "subnet_id": "subnet-01a1779acfee6c9fd"
          },
          "dependencies": [
            "module.network.aws_eip.nat_gateway",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.subnet-app-private",
            "module.network.aws_subnet.subnet-public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d3e972ae7541f992",
            "route_table_id": "rtb-0d1097b7c79a0ab7a",
            "subnet_id": "subnet-0720705af9bc30a59"
          },
          "dependencies": [
            "module.network.aws_eip.nat_gateway",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.subnet-app-private",
            "module.network.aws_subnet.subnet-public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e8f178f9919e3711",
            "route_table_id": "rtb-0d1097b7c79a0ab7a",
            "subnet_id": "subnet-0171618b705e975d1"
          },
          "dependencies": [
            "module.network.aws_eip.nat_gateway",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.subnet-db-private",
            "module.network.aws_subnet.subnet-public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d03c743ea23187f2",
            "route_table_id": "rtb-0d1097b7c79a0ab7a",
            "subnet_id": "subnet-0571b1a71691fb6f0"
          },
          "dependencies": [
            "module.network.aws_eip.nat_gateway",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.subnet-db-private",
            "module.network.aws_subnet.subnet-public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e97c665e6d6aa46",
            "route_table_id": "rtb-0d1097b7c79a0ab7a",
            "subnet_id": "subnet-00d6779575b3c6b81"
          },
          "dependencies": [
            "module.network.aws_eip.nat_gateway",
            "module.network.aws_internet_gateway.main",
            "module.network.aws_nat_gateway.main",
            "module.network.aws_route_table.private",
            "module.network.aws_subnet.subnet-db-private",
            "module.network.aws_subnet.subnet-public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044ea474630b57f51",
            "route_table_id": "rtb-0a62e25508ab71341",
            "subnet_id": "subnet-048465931170d1ab6"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.main",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.subnet-public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08101e643a0850999",
            "route_table_id": "rtb-0a62e25508ab71341",
            "subnet_id": "subnet-0132dfab37eeba593"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.main",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.subnet-public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027203f9781777450",
            "route_table_id": "rtb-0a62e25508ab71341",
            "subnet_id": "subnet-0edf1f920518418c4"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.main",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.subnet-public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:213307118311:security-group/sg-0a99382ac3c1e2969",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a99382ac3c1e2969",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.203.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "alb-sg-backup-production",
            "name_prefix": "",
            "owner_id": "213307118311",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg-backup-production"
            },
            "tags_all": {
              "Name": "alb-sg-backup-production"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f7f9fa07c37ec272"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:213307118311:security-group/sg-02f79a8c022716ce2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02f79a8c022716ce2",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.203.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "app-private-sg-backup-production",
            "name_prefix": "",
            "owner_id": "213307118311",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-private-sg-backup-production"
            },
            "tags_all": {
              "Name": "app-private-sg-backup-production"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f7f9fa07c37ec272"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:213307118311:security-group/sg-03d2402d8b0cb1cd3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03d2402d8b0cb1cd3",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.203.11.0/24",
                  "10.203.10.0/24",
                  "10.203.12.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.203.20.0/24",
                  "10.203.21.0/24",
                  "10.203.22.0/24"
                ],
                "description": "",
                "from_port": 111,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 111
              },
              {
                "cidr_blocks": [
                  "10.203.20.0/24",
                  "10.203.21.0/24",
                  "10.203.22.0/24"
                ],
                "description": "",
                "from_port": 111,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 111
              },
              {
                "cidr_blocks": [
                  "10.203.20.0/24",
                  "10.203.21.0/24",
                  "10.203.22.0/24"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [
                  "10.203.20.0/24",
                  "10.203.21.0/24",
                  "10.203.22.0/24"
                ],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 2049
              },
              {
                "cidr_blocks": [
                  "10.203.20.0/24",
                  "10.203.21.0/24",
                  "10.203.22.0/24"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              },
              {
                "cidr_blocks": [
                  "10.203.20.0/24",
                  "10.203.21.0/24",
                  "10.203.22.0/24"
                ],
                "description": "",
                "from_port": 6432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6432
              },
              {
                "cidr_blocks": [
                  "10.203.40.0/24",
                  "10.203.41.0/24",
                  "10.203.42.0/24"
                ],
                "description": "",
                "from_port": 6432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6432
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "db-private-sg-backup-production",
            "name_prefix": "",
            "owner_id": "213307118311",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-private-sg-backup-production"
            },
            "tags_all": {
              "Name": "db-private-sg-backup-production"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f7f9fa07c37ec272"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_subnet.subnet-app-private",
            "module.network.aws_subnet.subnet-db-private",
            "module.network.aws_subnet.subnet-public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:213307118311:security-group/sg-0867ce2b70dac7cf3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0867ce2b70dac7cf3",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.203.10.0/24",
                  "10.203.11.0/24",
                  "10.203.12.0/24",
                  "10.203.20.0/24",
                  "10.203.21.0/24",
                  "10.203.22.0/24"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "elasticache-backup-production",
            "name_prefix": "",
            "owner_id": "213307118311",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "elasticache-backup-production"
            },
            "tags_all": {
              "Name": "elasticache-backup-production"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f7f9fa07c37ec272"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_subnet.subnet-app-private",
            "module.network.aws_subnet.subnet-public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "proxy-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:213307118311:security-group/sg-09d6273b2c37d1130",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09d6273b2c37d1130",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.203.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "proxy-sg-backup-production",
            "name_prefix": "",
            "owner_id": "213307118311",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "proxy-sg-backup-production"
            },
            "tags_all": {
              "Name": "proxy-sg-backup-production"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f7f9fa07c37ec272"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:213307118311:security-group/sg-06a9ec2c9db9f2a8c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06a9ec2c9db9f2a8c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.203.10.0/24",
                  "10.203.11.0/24",
                  "10.203.12.0/24",
                  "10.203.40.0/24",
                  "10.203.41.0/24",
                  "10.203.42.0/24"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rds-backup-production",
            "name_prefix": "",
            "owner_id": "213307118311",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-backup-production"
            },
            "tags_all": {
              "Name": "rds-backup-production"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f7f9fa07c37ec272"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_subnet.subnet-app-private",
            "module.network.aws_subnet.subnet-db-private",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:213307118311:security-group/sg-0196cff5ec4b33ca5",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0196cff5ec4b33ca5",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.203.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh-sg-backup-production",
            "name_prefix": "",
            "owner_id": "213307118311",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-sg-backup-production"
            },
            "tags_all": {
              "Name": "ssh-sg-backup-production"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f7f9fa07c37ec272"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-app-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:213307118311:subnet/subnet-0c59a1f5c6d415be9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.203.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c59a1f5c6d415be9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "213307118311",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-a-app-private-backup-production"
            },
            "tags_all": {
              "Name": "subnet-a-app-private-backup-production"
            },
            "vpc_id": "vpc-0f7f9fa07c37ec272"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:213307118311:subnet/subnet-01a1779acfee6c9fd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.203.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a1779acfee6c9fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "213307118311",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-b-app-private-backup-production"
            },
            "tags_all": {
              "Name": "subnet-b-app-private-backup-production"
            },
            "vpc_id": "vpc-0f7f9fa07c37ec272"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:213307118311:subnet/subnet-0720705af9bc30a59",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.203.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0720705af9bc30a59",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "213307118311",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-c-app-private-backup-production"
            },
            "tags_all": {
              "Name": "subnet-c-app-private-backup-production"
            },
            "vpc_id": "vpc-0f7f9fa07c37ec272"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-db-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:213307118311:subnet/subnet-0171618b705e975d1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.203.40.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0171618b705e975d1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "213307118311",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-a-db-private-backup-production"
            },
            "tags_all": {
              "Name": "subnet-a-db-private-backup-production"
            },
            "vpc_id": "vpc-0f7f9fa07c37ec272"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:213307118311:subnet/subnet-0571b1a71691fb6f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.203.41.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0571b1a71691fb6f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "213307118311",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-b-db-private-backup-production"
            },
            "tags_all": {
              "Name": "subnet-b-db-private-backup-production"
            },
            "vpc_id": "vpc-0f7f9fa07c37ec272"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:213307118311:subnet/subnet-00d6779575b3c6b81",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.203.42.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d6779575b3c6b81",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "213307118311",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-c-db-private-backup-production"
            },
            "tags_all": {
              "Name": "subnet-c-db-private-backup-production"
            },
            "vpc_id": "vpc-0f7f9fa07c37ec272"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:213307118311:subnet/subnet-048465931170d1ab6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.203.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-048465931170d1ab6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "213307118311",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-a-public-backup-production"
            },
            "tags_all": {
              "Name": "subnet-a-public-backup-production"
            },
            "vpc_id": "vpc-0f7f9fa07c37ec272"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:213307118311:subnet/subnet-0132dfab37eeba593",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.203.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0132dfab37eeba593",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "213307118311",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-b-public-backup-production"
            },
            "tags_all": {
              "Name": "subnet-b-public-backup-production"
            },
            "vpc_id": "vpc-0f7f9fa07c37ec272"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:213307118311:subnet/subnet-0edf1f920518418c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.203.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0edf1f920518418c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "213307118311",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-c-public-backup-production"
            },
            "tags_all": {
              "Name": "subnet-c-public-backup-production"
            },
            "vpc_id": "vpc-0f7f9fa07c37ec272"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:213307118311:vpc/vpc-0f7f9fa07c37ec272",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.203.0.0/16",
            "default_network_acl_id": "acl-080d0b6c971b9690f",
            "default_route_table_id": "rtb-0d1f38145320378be",
            "default_security_group_id": "sg-06c2b2784819af43e",
            "dhcp_options_id": "dopt-d0741dbb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f7f9fa07c37ec272",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d1f38145320378be",
            "owner_id": "213307118311",
            "tags": {
              "Name": "vpc-backup-production"
            },
            "tags_all": {
              "Name": "vpc-backup-production"
            }
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:213307118311:vpc-endpoint/vpce-073467bb992fa6ed7",
            "cidr_blocks": [
              "18.34.252.0/22",
              "52.219.141.0/24",
              "18.34.72.0/21",
              "52.219.96.0/20",
              "52.219.224.0/21",
              "16.12.60.0/22",
              "52.219.232.0/22",
              "52.219.80.0/20",
              "3.5.128.0/22",
              "52.219.142.0/23",
              "3.5.132.0/23",
              "16.12.64.0/22",
              "52.219.212.0/22",
              "52.219.176.0/22"
            ],
            "id": "vpce-073467bb992fa6ed7",
            "owner_id": "213307118311",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-7ba54012",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0d1097b7c79a0ab7a"
            ],
            "service_name": "com.amazonaws.us-east-2.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0f7f9fa07c37ec272"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.server__control4-backup-production",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f5daaa3a7fb3378b",
            "arn": "arn:aws:ec2:us-east-2:213307118311:instance/i-08f79b21c058d9495",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": true,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "CommCareServerRole",
            "id": "i-08f79b21c058d9495",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3a.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2_kafka",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c43093b00ad1145f",
            "private_dns": "ip-10-203-10-115.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.203.10.115",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-2:213307118311:key/f2f1aa94-e050-42cc-a1b9-3f6ad76d1e5b",
                "tags": {
                  "Environment": "backup-production",
                  "Group": "control",
                  "Name": "vol-control4-backup-production",
                  "ServerName": "control4-backup-production"
                },
                "throughput": 125,
                "volume_id": "vol-096c3639e7d7e781f",
                "volume_size": 60,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0c59a1f5c6d415be9",
            "tags": {
              "Environment": "backup-production",
              "Group": "control",
              "Name": "control4-backup-production"
            },
            "tags_all": {
              "Environment": "backup-production",
              "Group": "control",
              "Name": "control4-backup-production"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0196cff5ec4b33ca5",
              "sg-02f79a8c022716ce2"
            ]
          },
          "dependencies": [
            "aws_key_pair.ec2_kafka",
            "data.aws_ami.ubuntu_jammy",
            "module.network.aws_customer_gateway.vpn_connections",
            "module.network.aws_security_group.app-private",
            "module.network.aws_security_group.db-private",
            "module.network.aws_security_group.proxy-sg",
            "module.network.aws_security_group.ssh",
            "module.network.aws_security_group.vpn_connections",
            "module.network.aws_subnet.subnet-app-private",
            "module.network.aws_subnet.subnet-db-private",
            "module.network.aws_subnet.subnet-public",
            "module.network.aws_vpc.main",
            "module.network.aws_vpn_connection.vpn_connections",
            "module.network.aws_vpn_connection_route.vpn_connections",
            "module.network.aws_vpn_gateway.vpn_connections",
            "module.server_iam_role.aws_iam_instance_profile.commcare_server_instance_profile",
            "module.server_iam_role.aws_iam_role.commcare_server_role"
          ]
        }
      ]
    },
    {
      "module": "module.server__kafka_backup-production[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f5daaa3a7fb3378b",
            "arn": "arn:aws:ec2:us-east-2:213307118311:instance/i-054f68f93a8973e53",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": true,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "CommCareServerRole",
            "id": "i-054f68f93a8973e53",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "ec2_kafka",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c034a508349e1233",
            "private_dns": "ip-10-203-40-211.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.203.40.211",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-2:213307118311:key/f2f1aa94-e050-42cc-a1b9-3f6ad76d1e5b",
                "tags": {
                  "Environment": "backup-production",
                  "Group": "kafka",
                  "Name": "vol-kafka-1a-backup-production",
                  "ServerName": "kafka-1a-backup-production"
                },
                "throughput": 125,
                "volume_id": "vol-0106be6b3c1ff8ba6",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0171618b705e975d1",
            "tags": {
              "Environment": "backup-production",
              "Group": "kafka",
              "Name": "kafka-1a-backup-production"
            },
            "tags_all": {
              "Environment": "backup-production",
              "Group": "kafka",
              "Name": "kafka-1a-backup-production"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0196cff5ec4b33ca5",
              "sg-03d2402d8b0cb1cd3"
            ]
          },
          "dependencies": [
            "aws_key_pair.ec2_kafka",
            "data.aws_ami.ubuntu_jammy",
            "module.network.aws_security_group.app-private",
            "module.network.aws_security_group.db-private",
            "module.network.aws_security_group.proxy-sg",
            "module.network.aws_security_group.ssh",
            "module.network.aws_security_group.vpn_connections",
            "module.network.aws_subnet.subnet-app-private",
            "module.network.aws_subnet.subnet-db-private",
            "module.network.aws_subnet.subnet-public",
            "module.server_iam_role.aws_iam_instance_profile.commcare_server_instance_profile"
          ]
        }
      ]
    },
    {
      "module": "module.server__kafka_backup-production[1]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f5daaa3a7fb3378b",
            "arn": "arn:aws:ec2:us-east-2:213307118311:instance/i-048420a5cc3ced4a2",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": true,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "CommCareServerRole",
            "id": "i-048420a5cc3ced4a2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "ec2_kafka",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-025304a4b06b04993",
            "private_dns": "ip-10-203-41-91.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.203.41.91",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-2:213307118311:key/f2f1aa94-e050-42cc-a1b9-3f6ad76d1e5b",
                "tags": {
                  "Environment": "backup-production",
                  "Group": "kafka",
                  "Name": "vol-kafka-2b-backup-production",
                  "ServerName": "kafka-2b-backup-production"
                },
                "throughput": 125,
                "volume_id": "vol-083bebcb185cd0b3f",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0571b1a71691fb6f0",
            "tags": {
              "Environment": "backup-production",
              "Group": "kafka",
              "Name": "kafka-2b-backup-production"
            },
            "tags_all": {
              "Environment": "backup-production",
              "Group": "kafka",
              "Name": "kafka-2b-backup-production"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0196cff5ec4b33ca5",
              "sg-03d2402d8b0cb1cd3"
            ]
          },
          "dependencies": [
            "aws_key_pair.ec2_kafka",
            "data.aws_ami.ubuntu_jammy",
            "module.network.aws_security_group.app-private",
            "module.network.aws_security_group.db-private",
            "module.network.aws_security_group.proxy-sg",
            "module.network.aws_security_group.ssh",
            "module.network.aws_security_group.vpn_connections",
            "module.network.aws_subnet.subnet-app-private",
            "module.network.aws_subnet.subnet-db-private",
            "module.network.aws_subnet.subnet-public",
            "module.server_iam_role.aws_iam_instance_profile.commcare_server_instance_profile"
          ]
        }
      ]
    },
    {
      "module": "module.server__kafka_backup-production[2]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f5daaa3a7fb3378b",
            "arn": "arn:aws:ec2:us-east-2:213307118311:instance/i-058a564d84cbec1c7",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": true,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "CommCareServerRole",
            "id": "i-058a564d84cbec1c7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "ec2_kafka",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-074b9a2c8bcbfc255",
            "private_dns": "ip-10-203-42-247.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.203.42.247",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-2:213307118311:key/f2f1aa94-e050-42cc-a1b9-3f6ad76d1e5b",
                "tags": {
                  "Environment": "backup-production",
                  "Group": "kafka",
                  "Name": "vol-kafka-3c-backup-production",
                  "ServerName": "kafka-3c-backup-production"
                },
                "throughput": 125,
                "volume_id": "vol-03c5601fd646c1cbc",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-00d6779575b3c6b81",
            "tags": {
              "Environment": "backup-production",
              "Group": "kafka",
              "Name": "kafka-3c-backup-production"
            },
            "tags_all": {
              "Environment": "backup-production",
              "Group": "kafka",
              "Name": "kafka-3c-backup-production"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0196cff5ec4b33ca5",
              "sg-03d2402d8b0cb1cd3"
            ]
          },
          "dependencies": [
            "aws_key_pair.ec2_kafka",
            "data.aws_ami.ubuntu_jammy",
            "module.network.aws_security_group.app-private",
            "module.network.aws_security_group.db-private",
            "module.network.aws_security_group.proxy-sg",
            "module.network.aws_security_group.ssh",
            "module.network.aws_security_group.vpn_connections",
            "module.network.aws_subnet.subnet-app-private",
            "module.network.aws_subnet.subnet-db-private",
            "module.network.aws_subnet.subnet-public",
            "module.server_iam_role.aws_iam_instance_profile.commcare_server_instance_profile"
          ]
        }
      ]
    }
  ]
}